# tetrispp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  stucture.hpp
src/: Game.cpp  Game.hpp  Input.cpp  Input.hpp  Render.cpp  Render.hpp  game_state.cpp  game_state.hpp  main.cpp  render.cpp  render.hpp  stucture.hpp  todo.md
